test/negative/missing_output_in_var_list.net
INPUT a
OUTPUT b
VAR a
IN
b = NOT a
